Fixed long post titles on mobile

--- a/_sass/layouts/_post.sass
+++ b/_sass/layouts/_post.sass
@@ -40,3 +40,7 @@
       margin: 1rem 0
     a
       border-bottom: 0.1rem dotted $black
++media(max-width 500px)
+  #post
+    h2
+      font-size: 9vw
